# FleetBattle2Tests

./: CMakeLists.txt  LICENSE.md  README.md
src/: CMakeLists.txt
src/agent/: CMakeLists.txt
src/opponentBoard/: CMakeLists.txt  testConstructor.cpp  testGetBoardStatus.cpp  testGetSquareStatus.cpp  testSetSquareStatus.cpp
src/player/: CMakeLists.txt  testAddSunkShips.cpp  testCheckOtherBoard.cpp  testCheckOwnBoard.cpp  testCheckShoot.cpp  testGetDeployedShipsCount.cpp  testGetSunkShipsCount.cpp  testIsShipSunk.cpp  testPlayerConstructor.cpp  testUpdateOtherBoard.cpp
src/playerBoard/: CMakeLists.txt  testGetBoardStatus.cpp  testGetSquareStatus.cpp  testPlayerBoardConstructor.cpp  testSetSquareStatus.cpp
src/utilities/: CMakeLists.txt  testDecodeCoordinates.cpp  testIsHorizontal.cpp  testIsVertical.cpp  testShipsOverlap.cpp  testTokenizeMessage.cpp
